added CSS features

--- a/index.html
+++ b/index.html
@@ -29,13 +29,21 @@
     </div>
 
     <section class="hero">
-        <div>
-            <h1>ifor</h1>
+        <div class="computer-action">
+            <p>Computer</p>
+            <div class="image-container">
+                <img src="./Images/Box-use.png" alt="">
+            </div>
         </div>
     </section>
 
     <search class="actionarea">
-
+        <div class="player-action">
+            <p>Player</p>
+            <div class="image-container">
+                <img src="./Images/Box-use.png" alt="">
+            </div>
+        </div>
     </search>
 
     <section class="footer">
