--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="CSS stylesheet" href="index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -56,23 +48,24 @@
         <div class="choices">
             <button class="decision" id="rock-btn">
                 <p class="symbol">✊</p>
-                <p> Rock</p>
+                <p> ROCK</p>
             </button>
         </div>
         <div class="choices">
             <button class="decision" id="paper-btn">
                 <p class="symbol">✋</p>
-                <p>Paper</p>
+                <p>PAPER</p>
             </button>
         </div>
         <div class="choices">
             <button class="decision" id="scissors-btn">
                 <p class="symbol">✌️</p>
-                <p> Scissors</p>
+                <p>SCISSORS</p>
             </button>
         </div>
     </section>
-    <script src="index.js"></script>
+
+<script src="index.js"></script>
 </body>
 
 </html>
