--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <link rel="CSS stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -18,54 +18,56 @@
             <a href="https://www.linkedin.com/feed/" target="_blank" class="myname">Joseph Ndungu</a>
         </div>
         <div class="count-container">
-            <h1 class="gameText" id="computerText">Computer:</h1>
-            <h1 class="gameText" id="playerText">Player: </h1>
+            <div class="scoreDisplay">Computer:
+                <span id="computerScoreD">0</span>
+            </div>
+
+            <div class="scoreDisplay">Player:
+                <span id="playerScoreD">0</span>
+            </div>
         </div>
     </div>
 
     <section class="heroe">
         <div class="action-display">
             <p>Computer</p>
-            <p class="symbols">✊</p>
+            <p class="symbols" id="computerChoice">✊</p>
         </div>
     </section>
 
     <section class="actionarea">
-        <p class="gameText" id="resultText">Result</p>
+        <p class="gameText" id="resultText">Currently Draw</p>
     </section>
 
     <section class="footer">
         <div class="action-display">
             <p class="atext">Player</p>
-            <p class="symbols">✋</p>
-        </div>
+            <p class="symbols" id="playerChoice">✊</p>
         </div>
     </section>
 
-
-
-    <section class="last-one" id="options-container">
+    <section class="last-one" id="options">
         <div class="choices">
-            <button class="decision" id="rock-btn">
+            <button class="decision" id="rock-btn" onclick="playGame('rock')">
                 <p class="symbol">✊</p>
-                <p> ROCK</p>
+                <p>ROCK</p>
             </button>
         </div>
         <div class="choices">
-            <button class="decision" id="paper-btn">
+            <button class="decision" id="paper-btn" onclick="playGame('paper')">
                 <p class="symbol">✋</p>
                 <p>PAPER</p>
             </button>
         </div>
         <div class="choices">
-            <button class="decision" id="scissors-btn">
+            <button class="decision" id="scissors-btn" onclick="playGame('scissors')">
                 <p class="symbol">✌️</p>
                 <p>SCISSORS</p>
             </button>
         </div>
     </section>
 
-<script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
