--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section class="heroe">
         <div class="action-display">
-            <p>Computer</p>
+            <p class="atext">Computer</p>
             <p class="symbols" id="computerChoice">✊</p>
         </div>
     </section>
