--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
             <a href="https://www.linkedin.com/feed/" target="_blank" class="myname">Joseph Ndungu</a>
         </div>
         <div class="count-container">
-            <div class="scoreDisplay">Computer:
-                <span id="computerScoreD">0</span>
-            </div>
 
-            <div class="scoreDisplay">Player:
-                <span id="playerScoreD">0</span>
+            <p>Computer:</p>
+            <span id="computerScoreD">0</span>
+            <span id="playerScoreD">0</span>
+            <div class="scoreDisplay">:Player
             </div>
         </div>
     </div>
